src/index.css
@import url("https://fonts.cdnfonts.com/css/general-sans");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
	@apply bg-bbsu-blue-50;

	font-family: "General Sans", system-ui, sans-serif;
	width: 100dvw;
	overflow-x: hidden;
}

@layer base {
	@font-face {
		font-family: "circular-web";
		src: url("/fonts/circularweb-book.woff2") format("woff2");
	}
	@font-face {
		font-family: "roboto-mono";
		src: url("/fonts/roboto-mono.woff2") format("woff2");
	}
	@font-face {
		font-family: "robert-regular";
		src: url("/fonts/robert-regular.woff2") format("woff2");
	}
	@font-face {
		font-family: "robert-medium";
		src: url("/fonts/robert-medium.woff2") format("woff2");
	}
	@font-face {
		font-family: "robert-medium";
		src: url("/fonts/robert-medium.woff2") format("woff2");
	}
	@font-face {
		font-family: "zentry-regular";
		src: url("/fonts/zentry-regular.woff2") format("woff2");
	}
}

@layer utilities {
	.mask-clip-path {
		clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
	}

	.special-font span {
		font-family: "Zentry-regular";
		font-feature-settings: "ss01" on;
	}

	.text-shadow {
		text-shadow: 0 0 0.15em #000, 0 0 0.15em #000, 0 0 0.15em #000,
			0 0 0.15em #000;
	}
	.svg-shadow {
		/* -webkit-filter: drop-shadow(4px 3px 2px #000); */
		filter: drop-shadow(1px 1px 3px #000) drop-shadow(-1px -1px 3px #000)
			drop-shadow(1px -1px 3px #000);
	}

	.hover-3d-effect {
		--glare-opacity: 0.3;
		@apply [transform:rotateX(var(--x-rotation))_rotateY(var(--y-rotation))]
			after:content-[""] after:absolute
			after:inset-0 after:pointer-events-none
			after:bg-[radial-gradient(at_var(--x)_var(--y),rgba(255,255,255)_10%,transparent_70%)] after:opacity-[var(--glare-opacity)];
	}
}

@layer components {
	.button-with-video-appearance {
		animation: show 0.5s ease-in-out;
	}
	@keyframes show {
		from {
			opacity: 0;
			width: 0;
			height: 0;
		}
	}

	.animated-word {
		@apply opacity-0;
		transform: translate3d(10px, 50px, -60px) rotateY(-60deg) rotateX(-40deg);
		transform-origin: 50% 50% -130px;
		will-change: opacity, transform;
	}

	.navbar-background {
		background: rgba(0, 0, 0, 0.7);
		-webkit-backdrop-filter: blur(10px);
		backdrop-filter: blur(10px);
	}

	.button {
		@apply flex justify-center items-center gap-1 bg-violet-50 py-3 px-4 sm:px-7 text-black text-sm sm:text-base md:text-lg lg:text-xl uppercase font-roboto-mono [&_span]:text-base sm:[&_span]:text-lg md:[&_span]:text-xl lg:[&_span]:text-2xl w-fit relative cursor-pointer rounded-full;
	}
	.button span {
		@apply transition-transform;
	}
	.button:hover span,
	.button:active span,
	.button:focus-within span {
		@apply rotate-45;
	}
	.promo-button {
		@apply bg-bbsu-yellow-300 text-bbsu-black-700;
	}
	.nav-button {
		@apply py-1 px-5 bg-blue-50 text-sm sm:text-base [&_span]:text-lg sm:[&_span]:text-lg md:[&_span]:text-lg lg:[&_span]:text-lg;
	}
	.video-card-button {
		@apply mt-3 max-w-64 gap-2 text-base md:text-lg bg-bbsu-black-700 text-bbsu-blue-100 py-2 px-4 pr-10 rounded-full;
	}

	/* HTML: <div class="loader"></div> */
	.loader {
		width: fit-content;
		font-weight: bold;
		font-family: monospace;
		font-size: 30px;
		background: radial-gradient(circle closest-side, #000 94%, #0000)
			right/calc(200% - 1.5em) 100%;
		animation: main-loader 1.3s infinite alternate linear;
	}
	.loader::before {
		content: "Loading...";
		padding-inline: 0.6em;
		line-height: 1em;
		color: #0000;
		background: inherit;
		background-image: radial-gradient(circle closest-side, #fff 94%, #000);
		-webkit-background-clip: text;
		background-clip: text;
	}
	@keyframes main-loader {
		100% {
			background-position: left;
		}
	}

	.music-indicator-line {
		@apply h-3 w-1 rounded-full bg-white transition-all duration-200 ease-in-out origin-center;
	}
	.music-indicator-line.active {
		--animation-order: 1;
		animation: music-indicator-line 0.5s ease infinite;
		animation-delay: calc(var(--animation-order) * 0.1s);
		will-change: transform;
	}
	@keyframes music-indicator-line {
		0% {
			@apply scale-y-50;
		}
		50% {
			@apply scale-y-125;
		}
		100% {
			@apply scale-y-50;
		}
	}

	.animate-slide-left {
		animation: slide-left 0.3s forwards ease-in-out;
	}
	@keyframes slide-left {
		0% {
			transform: translateX(300%);
		}
		100% {
			transform: none;
		}
	}

	/* ------------ PARALLAX CARD ---------------- */
	.parallax-card {
		--slide-width: 100%;
		--slide-height: 100%;
		--slide-aspect: 1 / 1;

		--slide-transition-duration: 800ms;
		--slide-transition-easing: ease;

		position: relative;
		transition: transform var(--slide-transition-duration)
			var(--slide-transition-easing);

		&:hover {
			transition: transform var(--slide-transition-duration)
				var(--slide-transition-easing);
		}

		&.reset-position {
			.background-inner-wrapper,
			.video,
			.card-info-wrapper,
			.card-info-inner-wrapper {
				transition: transform var(--slide-transition-duration)
					var(--slide-transition-easing);
			}
		}

		/* ------------ CARD BACKGROUND ---------------- */

		.background-wrapper {
			--padding: 0px;
			--offset: 0;

			position: absolute;
			pointer-events: auto;
			width: var(--slide-width);
			height: var(--slide-height);
			aspect-ratio: var(--slide-aspect);
			-webkit-user-select: none;
			user-select: none;
			perspective: 800px;

			transform: perspective(800px);
		}

		.background-inner-wrapper {
			--rotX: 0deg;
			--rotY: 0deg;
			--bgPosX: 0px;
			--bgPosY: 0px;

			position: relative;
			left: calc(var(--padding) / 2);
			top: calc(var(--padding) / 2);
			width: calc(100% - var(--padding));
			height: calc(100% - var(--padding));
			transform-style: preserve-3d;
			transform: rotateX(var(--rotX)) rotateY(var(--rotY));
		}

		.video-wrapper {
			position: relative;
			width: 100%;
			height: 100%;
			overflow: hidden;
		}

		.video {
			width: 100%;
			height: 100%;
			position: absolute;
			top: 50%;
			left: 50%;
			object-fit: cover;
			transform: translate(-50%, -50%) scale(1.25)
				translate3d(var(--bgPosX), var(--bgPosY), 0);
		}

		/* ------------ CARD INFO ---------------- */

		.card-info-wrapper {
			--padding: 0px;

			width: var(--slide-width);
			height: 100%;
			aspect-ratio: var(--slide-aspect);
			perspective: 800px;
			z-index: 100;
		}

		.card-info-inner-wrapper {
			position: relative;
			left: calc(var(--padding) / 2 + 2rem);
			top: calc(var(--padding) / 2 + 2rem);
			width: calc(100% - var(--padding) - 4rem);
			height: calc(100% - var(--padding) - 4rem);
			transform-style: preserve-3d;
			transform: rotateX(var(--rotX)) rotateY(var(--rotY));
		}

		.card-info-text-wrapper {
			@apply flex flex-col justify-between z-10 h-full;

			transition: var(--slide-transition-duration) var(--slide-transition-easing);
			transition-property: transform;
		}

		.card-info-text {
			@apply overflow-hidden;
		}

		.card-info-title {
			@apply special-font uppercase md:text-6xl text-4xl font-black font-zentry-regular text-bbsu-blue-50 text-shadow;
		}

		.card-info-description {
			@apply mt-5 md:max-w-prose text-lg md:text-xl text-shadow text-bbsu-blue-50;
		}
	}
}

